[workspace]
resolver = "2"
members = [ "inferno", "skyfall"]
exclude = []
default-members = ["skyfall", "inferno"]

[workspace.package]
edition = "2021"
rust-version = "1.71.0"
keywords = ["graphics", "wgpu"]
license = "MIT"
homepage = "https://github.com/thechibbis/inferno"
version = "0.1.0"
authors = ["thechibbis <guilhermedeoliveira.menezes@gmail.com>"]

[workspace.dependencies]
skyfall = { version = "0.1.0", path = "skyfall" }
inferno = { version = "0.1.0", path = "inferno" }

tokio = { version = "1.37.0", features = ["full"] }
pollster = "0.3"
anyhow = "1.0.82"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["tracing"] }
wgpu = "0.20.0"
winit = { version = "0.30.0", features = ["rwh_06"] }