[package]
name = "skyfall"
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
license.workspace = true
homepage.workspace = true
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
pollster.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wgpu.workspace = true
winit.workspace = true